# manim-tensors

./: .gitignore  README.md  pyproject.toml
example_scenes/: ex_tensor.py
src/manim_tensors/: Tensor.py  Unit.py  __init__.py
