[project]
name = "manim-tensors"
version = "0.1.0"
description = ""
authors = [
    {name = "Axel Farrugia",email = "axelfar2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "manim_tensors", from = "src"}]

[tool.poetry.plugins."manim.plugins"]
"manim_tensors" = "manim_tensors:TensorPlugin"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
